formatting and some css

--- a/src/component/profileCard.css
+++ b/src/component/profileCard.css
@@ -1,11 +1,17 @@
 /* TODO: Last Row card dimination was not proper*/
 
-*{
+* {
     margin: 5px;
+    flex: 1;
+}
+.profileCards{
+    text-align: center;
+    display: flex;
+    flex-wrap : wrap;
+    margin: 10px;
+    width:100%;
 }
 .profileCard {
-    display: flex;
-    flex-direction: column;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     border-radius: 5px;
@@ -29,7 +35,7 @@ img {
 }
 
 .profileCard__links {
-    display: flex;    
+    display: flex;
     margin: 2px;
     padding: 0 10px 0 px;
     justify-content: space-evenly;
